--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET( LIBRARY_VERSION "0.1.0" )
 
 SET( HEADER_PATH ${PROJECT_SOURCE_DIR}/include/osre/ )
+add_definitions( -DOSRE_BUILD_EXPORT )
 
 INCLUDE_DIRECTORIES(
     ${PROJECT_SOURCE_DIR}
