--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,11 +84,11 @@ ADD_SUBDIRECTORY( 3dparty/soil )
 
 # Include the doc component.
 #ADD_SUBDIRECTORY( Doc )
-FIND_PACKAGE( doxygen )
-IF ( DOXYGEN_FOUND )
-    CONFIGURE_FILE( Doc/Doxygen/OSRE_dox_config.in Doc/Doxygen/Doxyfile @ONLY )
-    ADD_CUSTOM_TARGET( doc ALL ${DOXYGEN_EXECUTABLE} Doc/Doxygen/Doxyfile
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT "Generating API documentation with Doxygen" VERBATIM
-    )
-ENDIF ( DOXYGEN_FOUND )
+#FIND_PACKAGE( doxygen )
+#IF ( DOXYGEN_FOUND )
+#    CONFIGURE_FILE( Doc/Doxygen/OSRE_dox_config.in Doc/Doxygen/Doxyfile @ONLY )
+#    ADD_CUSTOM_TARGET( doc ALL ${DOXYGEN_EXECUTABLE} Doc/Doxygen/Doxyfile
+#        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+#        COMMENT "Generating API documentation with Doxygen" VERBATIM
+#    )
+#ENDIF ( DOXYGEN_FOUND )
