- Add first implementation for HelloWorld - Remove generated files. - Add configuration for platform-specific log streams.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,9 +69,9 @@ elseif( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
     endif()
 endif()
 
-# Generate a pkg-config .pc for the ZFXCE2 library.
-#CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/zfxce2.pc.in" "${PROJECT_BINARY_DIR}/zfxce2.pc" @ONLY )
-#INSTALL( FILES "${PROJECT_BINARY_DIR}/zfxce2.pc" DESTINATION ${LIB_INSTALL_DIR}/pkgconfig/ COMPONENT zfxce2-dev)
+# Generate a pkg-config .pc for the OSRE library.
+#CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/osre.pc.in" "${PROJECT_BINARY_DIR}/osre.pc" @ONLY )
+#INSTALL( FILES "${PROJECT_BINARY_DIR}/osre.pc" DESTINATION ${LIB_INSTALL_DIR}/pkgconfig/ COMPONENT osre-dev)
 
 # Include all sub directories of the engine code component
 ADD_SUBDIRECTORY( src )
