--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,7 +49,7 @@ SET( common_inc
     ${HEADER_PATH}/Common/TFunctor.h
     ${HEADER_PATH}/Common/TObjPtr.h
     ${HEADER_PATH}/Common/Tokenizer.h
-    ${HEADER_PATH}/Common/Types.h
+    ${HEADER_PATH}/Common/osre_common.h
     ${HEADER_PATH}/Common/TArea.h
 )
     
