Fonts: prepare font base class.

--- a/test/RenderTests/CMakeLists.txt
+++ b/test/RenderTests/CMakeLists.txt
@@ -14,6 +14,7 @@ SET ( rendertest_src
     src/RenderTestSuite.cpp
     src/BaseTriangleRenderTest.cpp
     src/BaseTextureRenderTest.cpp
+    src/DbgFontRenderTest.cpp
     src/GeoInstanceRenderTest.cpp
     src/RenderTestSuite.h
     src/RenderTestUtils.h
